# modal

./: .gitignore  CLAUDE.md  README.md  custom.css  hello.py  new-app.py  package-lock.json  pyproject.toml  requirements.txt  stream-conditions-app.py  streaming-conditions.qmd  system_prompt.md
docs/: architecture.md
hcc_modal/: __init__.py
js/: modal.js
src/modal/: __init__.py
