[project]
name = "modal-hcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astral>=3.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "modal>=0.64.228",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
